# discirc

./: .gitignore  Cargo.toml  README.md  discirc.example.toml
src/: config.rs  main.rs  message.rs
src/discord/: bot.rs  handler.rs  mod.rs
src/irc/: mod.rs
