[package]
name = "discirc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.8"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "unstable_discord_api",
]
